# gca

./: .gitignore  pyproject.toml
notebooks/: explore.ipynb  langchain.ipynb
notebooks/.ipynb_checkpoints/: explore-checkpoint.ipynb
